# structuring-knowledge_assignment

./: Dockerfile  README.md  data_import.py  docker-compose.yml  elasticsearch.yml  package.json  pyproject.toml  setup.sh
src/: App.vue
